<resources>
    <string name="app_name">SensorDataCollector</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="editBtnText">Save</string>
    <string name="resetPasswordText">Reset Password</string>
    <string name="logoutBtnText">Logout</string>
    <string name="title_profile">Profile</string>
    <string name="title_settings">Settings</string>
    <string name="register">register</string>
    <string name="cancel">cancel</string>
    <string name="preference_key">preference_key</string>
    <string name="other_setting_key">other_setting_key</string>
    <string name="uid">uid</string>
    <string name="ON_OFF_checkbox_text">ON/OFF</string>
    <string name="low_freq">LOW</string>
    <string name="mid_freq">MID</string>
    <string name="high_freq">HIGH</string>
    <string name="active_sensors"><u>Active Sensors</u>:</string>
    <string name="reward_points"><u>Reward Points</u>:</string>
</resources> 