<?xml version="1.0" encoding="utf-8"?>

<merge
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/sensor_name_view"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/frequency_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="Frequency"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/toggleButton"
        app:layout_constraintEnd_toEndOf="@+id/toggleButton"
        app:layout_constraintTop_toTopOf="parent" />
    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/sensor_switch"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:checked="false"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:singleSelection="true"
        app:selectionRequired="true"
        app:layout_constraintStart_toEndOf="@+id/sensor_name_view"
        app:layout_constraintTop_toBottomOf="@id/frequency_view">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button1"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/low_freq" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button2"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mid_freq" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button3"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/high_freq" />
    </com.google.android.material.button.MaterialButtonToggleGroup>


</merge>